option('user', type: 'string', value: 'clevis', description: 'Unprivileged user for secure clevis operations')
option('group', type: 'string', value: 'clevis', description: 'Unprivileged group for secure clevis operations')
option('tpm2_tools', type: 'string', value: '', description: 'Override path to tpm2-tools')
option('pwmake', type: 'string', value: '', description: 'Override location of pwmake')
